2008-12-19  Andreas Kirschbaum

	* Improve scaling algorithmn for minimap contents.

	* Fix display issues (ghost images) with animated items.

2008-12-07  Andreas Kirschbaum

	* Fix "Arm" stat display.

	* Reduce CPU usage while client is idle on trunk servers.

2008-11-26  Andreas Kirschbaum

	* Fix memory leak when picking up items.

	* Disable output buffering for --debug-protocol and --debug-keyboard
	options.

2008-11-24  Andreas Kirschbaum

	* Implement resolutions 1920x1200 and 2560x1600.

	* Add --debug-keyboard option to log keyboard input.

2008-11-21  Andreas Kirschbaum

	* Do not clear existing information when painting magic map data.

2008-10-26  Andreas Kirschbaum

	* Fix disappearing password dialog issue.

	* Make scroll bar in inventory view work.

2008-10-25  Andreas Kirschbaum

	* Add JUnit archive to project.

2008-09-14  Andreas Kirschbaum

	* Fix crashes in inventory dialog and server selection window due
	to race conditions between GUI and server socket threads.

2008-09-13  Andreas Kirschbaum

	* Do not insert stray repeat count when entering commands with /
	key.

2008-09-06  Andreas Kirschbaum

	* Replace empty faces with arrows in "Click here to see
	next/previous group of items" buttons.

	* Remove arrow buttons from ground view. Requires a Crossfire
	server supporting the "num_look_objects" setup option (r9810).
	Older servers do work but ground view scrolling does not work.
	Makes prelude skin's ground view functional.

	* Fix inventory window:
	- Show items when scrolling down.
	- When moving the selection, make sure the last row is shown even
	if only partially filled.

2008-09-03  Andreas Kirschbaum

	* Fix inventory window sometimes showing only one column.

	* Suppress error messages "updateItem: undefined item ..." for
	upditem commands updating face information only. Such messages are
	sent by the server for invisible items.

2008-07-07  Andreas Kirschbaum

	* Display information about selected item in inventory view.
